Remove assets folder and fix contrast issue

--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,7 @@ section {
 
     text-decoration: none;
     font-weight: bolder;
+    color: var(--light-font-color);
 }
 
 @media only screen and (max-width: 600px) {
